# djrepo

./: Caddyfile  docker-compose.yaml  pyproject.toml  readme.md
.github/workflows/: django.yml  react.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  tests.py
backend/main/: admin.py  forms.py  serializers.py  tests.py  urls.py  views.py
backend/main/management/commands/: generate_resumes.py
backend/main/migrations/: 0002_resume_education_previousjob_resume_skill_rating.py  0003_resume_created_at_resume_updated_at.py
backend/main/templates/main/: edit_resume.html  resume_detail.html  resume_list.html
backend/mysite/: settings.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
main/: models.py  urls.py  views.py
main/management/commands/: generate_resumes.py
main/migrations/: 0001_initial.py
main/templates/main/: base.html  landing.html
main/templates/main/includes/: resume_card.html
mysite/: settings.py  urls.py
